# Grieg

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  ToDo.txt
assets/meshes/: griegNormal.mtl  griegNormal2.mtl  grieghallen.mtl
assets/shaders/: basic.fs.glsl  basic.vs.glsl  cube.fs.glsl  cube.vs.glsl  depth.fs.glsl  grid.fs.glsl  grid.vs.glsl  normals.fs.glsl  normals.vs.glsl  toon.fs.glsl  triangle.fs.glsl  triangle.vs.glsl
resources/images/: images.qrc
resources/meshes/: grieghallen.mtl  meshes.qrc
resources/shaders/: ambient.fs.glsl  basic.fs.glsl  basic.vs.glsl  depth.fs.glsl  depth.vs.glsl  fog.fs.glsl  grid.fs.glsl  grid.vs.glsl  height.fs.glsl  identity.fs.glsl  lines.fs.glsl  lines.vs.glsl  normals.fs.glsl  shaders.qrc  skybox.fs.glsl  skybox.vs.glsl  text.fs.glsl  text.vs.glsl  toon.fs.glsl  toon.vs.glsl  yo.txt
resources/textures/: textures0.qrc  textures1.qrc  textures2.qrc
source/: BinParser.hh  Camera.cc  Camera.hh  CameraPath.cc  CameraPath.hh  Cubemap.cc  Cubemap.hh  Debug.cc  Debug.hh  Help.ui  HelpDialog.cc  HelpDialog.hh  LightDialog.cc  LightDialog.hh  LightDialog.ui  Lights.ui  MainWindow.cc  MainWindow.hh  Object.cc  Object.hh  Renderer.cc  Renderer.hh  Sdl.cc  Sdl.hh  Shader.cc  Shader.hh  ShaderStorage.hh  SkyBox.cc  SkyBox.hh  Text.cc  Text.hh  Texture.cc  Texture.hh  Trackball.cc  Trackball.hh  UniformBuffer.hh  camera.cc  camera.hh  debug.cc  debug.hh  (+11 more)
source/qt/: MainWindow.cc  MainWindow.hh  OpenGLWidget.cc  OpenGLWidget.hh
source/ui/: MainWindow.cc  MainWindow.hh  OpenGLWidget.cc  OpenGLWidget.hh
